# PALM

./: .gitignore  0_gen_features.py  0_get_unique_adsorbents_and_adsorbates.py  1_datasail_split.py  2_summary.py  2_validation.py  2_visualization.py  3_analysis.py  LICENSE  README.md  __init__.py  __main__.py  cache.py  config.py  datasail_split.py  gen_features.py  loaders.py  metrics.py  pipeline.py  pyproject.toml  splitting.py  test_datasail.ipynb  visualization.py
.claude/: .nfs0000008dceb8918d000002fd  .nfs0000008dceb8918f00000112  .nfs0000008dcfab22cd0000085c  .nfs000000932f3840a300000065  .nfs00000096d6da04d000024418
configs/: oc22_example.yaml
features/: __init__.py  biomolecule_features.py  elemental_data.py  gene_features.py  material_features.py  molecule_features.py  utils.py
features/data/: mat2vec_embeddings.json
output/: datasail_split_C1e.csv  datasail_split_C1f.csv  datasail_split_C2.csv  datasail_split_I1e.csv  datasail_split_I1f.csv  unique_adsorbates.csv  unique_adsorbents.csv
output/split_result/: datasail_split_C1e__e_adsorption__f_catalytic.csv  datasail_split_C1e__e_composition__f_stoichiometry.csv  datasail_split_C1e__e_physchem__f_stoichiometry.csv  datasail_split_C1e__e_rdkit_descriptors__f_catalytic.csv  datasail_split_C2__e_adsorption__f_bonding.csv  (+33 more)
poster/: poster.tex
tests/: generate_test_data.py  prepare_data.py  prepare_large_datasets.py  prepare_ml_demo.py  run_ml_experiment.py  run_tests.sh  test_formats.py  test_improvements.py  test_mp_regression.py  test_pipeline.py  visualize_leakage_demo.py
webapp/: app.py  run.sh
(+210 files in other folders)
